--- a/r4babs1/week-8/study_after_workshop.qmd
+++ b/r4babs1/week-8/study_after_workshop.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Independent Study - after the workshop"
+format:
   html:
     code-fold: true
     code-summary: "Answer - don't look until you have tried!"
