--- a/r4babs1/week-9/study_after_workshop.qmd
+++ b/r4babs1/week-9/study_after_workshop.qmd
@@ -1,8 +1,9 @@
 ---
 title: "Independent Study - after the workshop"
-execute: 
-  echo: false
-  include: false
+format:
+  html:
+    code-fold: true
+    code-summary: "Answer - don't look until you have tried!"
 ---
 
 ### Blood data set
